Fix Hero layout on mobile and tablet

--- a/src/sections/about/about.module.scss
+++ b/src/sections/about/about.module.scss
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 6.4rem;
+    gap: 3.2rem;
     height: 100%;
 
     @include breakpoint('lg') {
@@ -35,10 +35,13 @@
     background-position: center;
     border-radius: 50%;
     overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     > img {
-      max-height: 100%;
-      width: 100%;
+      min-height: 100%;
+      min-width: 100%;
     }
 
     &-wrapper {
